scrollbar fix

--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -29,15 +29,25 @@ $inputFontSize: 20px;
     height: 100%;
     display: flex;
     align-items:center;
-    background: -moz-linear-gradient(top, hsla(194,91%,67%,1) 0%, hsla(210,100%,64%,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, hsla(194,91%,67%,1) 0%,hsla(210,100%,64%,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, hsla(194,91%,67%,1) 0%,hsla(210,100%,64%,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5fd3f7', endColorstr='#46a3ff',GradientType=0 ); /* IE6-9 */
+    // background: -moz-linear-gradient(top, hsla(194,91%,67%,1) 0%, hsla(210,100%,64%,1) 100%); /* FF3.6-15 */
+    // background: -webkit-linear-gradient(top, hsla(194,91%,67%,1) 0%,hsla(210,100%,64%,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    // background: linear-gradient(to bottom, hsla(194,91%,67%,1) 0%,hsla(210,100%,64%,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5fd3f7', endColorstr='#46a3ff',GradientType=0 ); /* IE6-9 */
+    // background: $cyan;
     .ContactGrid{
         margin: 0 auto;
         min-width: 350px;
         max-width: 750px;
         width:50%;
+    }
+    .Stripe{
+        width: 100%;
+        height: 250px;
+        background: $cyan;
+        position: absolute;
+        -ms-transform: skewY(-20deg); /* IE 9 */
+        -webkit-transform: skewY(-20deg); /* Safari 3-8 */
+        transform: skewY(-20deg);
     }
 }
 .BackButton{
